--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id='container'></div>
 
 
     <script type="text/javascript" src='./bundle.js'>
+    </script>
+    <script>
+      // hideScrollbar()
+      //
+      // function hideScrollbar() {
+      //   var gameField = document.getElementById('gamefield-container');
+      //   var right = gameField.offsetWidth - gameField.clientWidth;
+      //   var bottom = gameField.offsetHeight - gameField.clientHeight;
+      //   console.log(right, bottom)
+      //  gameField.style.right = -right + 'px';
+      //  gameField.style.bottom = -bottom + 'px';
+      // }
     </script>
   </body>
 </html>
