--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,9 @@
     <div id='container'></div>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script type="text/javascript" src='./bundle.js'>
     </script>
-    <script>
-      // hideScrollbar()
-      //
-      // function hideScrollbar() {
-      //   var gameField = document.getElementById('gamefield-container');
-      //   var right = gameField.offsetWidth - gameField.clientWidth;
-      //   var bottom = gameField.offsetHeight - gameField.clientHeight;
-      //   console.log(right, bottom)
-      //  gameField.style.right = -right + 'px';
-      //  gameField.style.bottom = -bottom + 'px';
-      // }
-    </script>
+
   </body>
 </html>
