--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title></title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
-    <link rel="stylesheet" href="./public/reset.css">
-    <link rel="stylesheet" href="./public/style.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id='container'></div>
 
 
-    <script type="text/javascript" src='./public/bundle.js'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script type="text/javascript" src='./bundle.js'>
     </script>
-    <script>
 
-    </script>
   </body>
 </html>
