--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-    <script type="text/javascript" src='./publicbundle.js'>
+    <script type="text/javascript" src='./public/bundle.js'>
     </script>
 
   </body>
