--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,18 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport' />
 
     <title></title>
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id='container'></div>
 
-
     <script>
-      console.log('this script is loaded')
+      console.log('that2 script is loaded')
     </script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-    <script type="text/javascript" src='./public/bundle.js'>
+    <script type="text/javascript" src='bundle.js'>
     </script>
 
   </body>
